Успешно работает docker-compose для статистики