@@ -9,6 +9,7 @@ import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,7 +25,7 @@ public class StatService {
     }
 
     public List<ViewStats> getStats(LocalDateTime start, LocalDateTime end, String[] uris, boolean unique) {
-        return Arrays.stream(uris).map(u -> getStatsFor(u, start, end, unique)).toList();
+        return Arrays.stream(uris).map(u -> getStatsFor(u, start, end, unique)).collect(Collectors.toList());
     }
 
     private ViewStats getStatsFor(String uri, LocalDateTime start, LocalDateTime end, boolean unique) {
